--- a/gameengine-editor/src/main/webapp/webcomponents/gameeditor-contextmenu/gameeditor-contextmenu.html
+++ b/gameengine-editor/src/main/webapp/webcomponents/gameeditor-contextmenu/gameeditor-contextmenu.html
@@ -14,12 +14,10 @@
   ~ limitations under the License.
   -->
 <link rel="import" href="../../bower_components/polymer/polymer.html">
-<link rel="import" href="gameeditor-contextmenuitem.html">
-<link rel="import" href="shared-styles.html">
 
 <dom-module id="gameeditor-contextmenu">
     <template>
-        <style include="global-shared-styles">
+        <style>
             :host {
                 position: absolute;
                 border: 1px solid white;
