--- a/gameengine-editor/src/main/webapp/webcomponents/gameeditor-ruleeditor/gameeditor-ruleeditor.html
+++ b/gameengine-editor/src/main/webapp/webcomponents/gameeditor-ruleeditor/gameeditor-ruleeditor.html
@@ -14,13 +14,13 @@
   ~ limitations under the License.
   -->
 <link rel="import" href="../../bower_components/polymer/polymer.html">
-<link rel="import" href="shared-styles.html">
 
 <dom-module id="gameeditor-ruleeditor">
     <template>
-        <style include="content-shared-styles">
+        <style>
             :host {
                 width: 100%;
+                flex-shrink: 1;
             }
 
             .vertical {
