--- a/gameengine-editor/src/main/webapp/webcomponents/gameeditor-selectpropertyeditor/gameeditor-selectpropertyeditor.html
+++ b/gameengine-editor/src/main/webapp/webcomponents/gameeditor-selectpropertyeditor/gameeditor-selectpropertyeditor.html
@@ -14,11 +14,36 @@
   ~ limitations under the License.
   -->
 <link rel="import" href="../../bower_components/polymer/polymer.html">
-<link rel="import" href="shared-styles.html">
 
 <dom-module id="gameeditor-selectpropertyeditor">
     <template>
-        <style include="property-shared-styles"></style>
+        <style>
+            .field {
+                background-color: white;
+                width: 100%;
+                border: 2px solid #33373c;
+                text-align: center;
+            }
+
+            .field label {
+                display: block;
+                background-color: #bdc3c7;
+                color: black;
+                text-align: left;
+                padding-left: 2px;
+            }
+
+            .field select {
+                border: none;
+                width: 100%;
+                padding-left: 2px;
+                box-sizing: border-box;
+                -webkit-appearance: none;
+                z-index: 99;
+                background-color: white;
+            }
+
+        </style>
 
         <div class="field">
             <label for="selection">[[label]]</label>
