--- a/gameengine-editor/src/main/webapp/webcomponents/gameeditor-contextmenuitem/gameeditor-contextmenuitem.html
+++ b/gameengine-editor/src/main/webapp/webcomponents/gameeditor-contextmenuitem/gameeditor-contextmenuitem.html
@@ -14,37 +14,42 @@
   ~ limitations under the License.
   -->
 <link rel="import" href="../../bower_components/polymer/polymer.html">
-<link rel="import" href="shared-styles.html">
-<link rel="import" href="gameeditor-ruleeditor.html">
 
-<dom-module id="gameeditor-eventsheeteditor">
+<dom-module id="gameeditor-contextmenuitem">
     <template>
-        <style include="content-shared-styles">
-            :host {
-                width: 100%;
-                height: 100%;
-                display: flex;
-                flex-direction: column;
-                overflow-y: auto;
-                overflow-x: hidden;
+        <style>
+            .contextmenuitem {
+                color: white;
+                font-family: 'Open Sans', sans-serif;
+                background-color: #4a5058;
+                padding: 0.1em;
+                padding-left: 0.3em;
+                padding-right: 0.3em;
+                height: 1.6em;
+                line-height: 1.6em;
+                vertical-align: middle;
             }
 
-            gameeditor-ruleeditor {
-                flex-shrink: 1;
+            .contextmenuitem:hover {
+                background-color: #b9bec4;
+                color: black;
             }
         </style>
-        <content></content>
+        <div class="contextmenuitem">{{text}}</div>
     </template>
     <script>
         Polymer({
-            is: 'gameeditor-eventsheeteditor',
+            is: 'gameeditor-contextmenuitem',
 
             properties: {
+                text: {
+                    type: String,
+                    notify: true
+                }
             },
 
             ready: function() {
             }
-
         });
     </script>
 </dom-module>
