--- a/gameengine-editor/src/main/webapp/webcomponents/gameeditor-separator/gameeditor-separator.html
+++ b/gameengine-editor/src/main/webapp/webcomponents/gameeditor-separator/gameeditor-separator.html
@@ -15,7 +15,7 @@
   -->
 <link rel="import" href="../../bower_components/polymer/polymer.html">
 
-<dom-module id="global-shared-styles">
+<dom-module id="gameeditor-separator">
     <template>
         <style>
             .separator {
@@ -53,23 +53,47 @@
                 visibility: hidden;
                 display: none;
             }
-
-            .contextmenuitem {
-                color: white;
-                font-family: 'Open Sans', sans-serif;
-                background-color: #4a5058;
-                padding: 0.1em;
-                padding-left: 0.3em;
-                padding-right: 0.3em;
-                height: 1.6em;
-                line-height: 1.6em;
-                vertical-align: middle;
-            }
-
-            .contextmenuitem:hover {
-                background-color: #b9bec4;
-                color: black;
-            }
         </style>
+        <div class$="{{computeStyle(major)}}"><img id="contextmenu" class="contextmenu" src="menu.png">{{text}}<img id="deletebutton" class="deletebutton" src="close.png"></div>
     </template>
+    <script>
+        Polymer({
+            is: 'gameeditor-separator',
+
+            properties: {
+                text: {
+                    type: String,
+                    notify: true
+                },
+                major: {
+                    type: Boolean,
+                    notify: true,
+                    value: false
+                }
+            },
+
+            computeStyle: function(major) {
+                if (major) {
+                    return "separator";
+                }
+                return "separatorlight";
+            },
+
+            addDeleteListener: function(aListener) {
+                this.$.deletebutton.style.display = 'inline';
+                this.$.deletebutton.style.visibility = 'visible';
+                this.$.deletebutton.addEventListener("click", aListener);
+            },
+
+            addContextMenuListener: function(aListener) {
+                this.$.contextmenu.style.display = 'inline';
+                this.$.contextmenu.style.visibility = 'visible';
+                this.$.contextmenu.addEventListener("click", aListener);
+            },
+
+            ready: function() {
+            }
+
+        });
+    </script>
 </dom-module>
