--- a/gameengine-editor/src/main/webapp/webcomponents/gameeditor-twofieldpropertyeditor/gameeditor-twofieldpropertyeditor.html
+++ b/gameengine-editor/src/main/webapp/webcomponents/gameeditor-twofieldpropertyeditor/gameeditor-twofieldpropertyeditor.html
@@ -14,11 +14,39 @@
   ~ limitations under the License.
   -->
 <link rel="import" href="../../bower_components/polymer/polymer.html">
-<link rel="import" href="shared-styles.html">
 
 <dom-module id="gameeditor-twofieldpropertyeditor">
     <template>
-        <style include="property-shared-styles"></style>
+        <style>
+            .field {
+                background-color: white;
+                width: 100%;
+                border: 2px solid #33373c;
+                text-align: center;
+            }
+
+            .field label {
+                display: block;
+                background-color: #bdc3c7;
+                color: black;
+                text-align: left;
+                padding-left: 2px;
+            }
+
+            .field input[type=text] {
+                border: none;
+                width: 100%;
+                padding-left: 2px;
+                box-sizing: border-box;
+                -webkit-appearance: none;
+                z-index: 99;
+                background-color: white;
+            }
+
+            .width-2 {
+                width: 25%;
+            }
+        </style>
         <div class="field width-2">
             <label for="field1">[[label1]]</label>
             <input type="text" id="field1" name="field1" value="{{value1}}" on-blur="updateData1">
