--- a/gameengine-editor/src/main/webapp/webcomponents/gameeditor-fontpropertyeditor/gameeditor-fontpropertyeditor.html
+++ b/gameengine-editor/src/main/webapp/webcomponents/gameeditor-fontpropertyeditor/gameeditor-fontpropertyeditor.html
@@ -20,9 +20,9 @@
         <style>
             .field {
                 background-color: white;
-                width: 100%;
                 border: 2px solid #33373c;
                 text-align: center;
+                display: table-cell;
             }
 
             .field label {
