--- a/gameengine-editor/src/main/webapp/webcomponents/gameeditor-separator/gameeditor-separator.html
+++ b/gameengine-editor/src/main/webapp/webcomponents/gameeditor-separator/gameeditor-separator.html
@@ -45,6 +45,13 @@
                 float: right;
                 visibility: hidden;
                 display: none;
+                content: url("close.png");
+            }
+
+            .deletebutton:after {
+                content: url("close.png");
+                width: 18px;
+                height: 18px;
             }
 
             .contextmenu {
@@ -52,9 +59,20 @@
                 float: left;
                 visibility: hidden;
                 display: none;
+                content: url("menu.png");
             }
+
+            .contextmenu:after {
+                vertical-align: middle;
+                float: left;
+                visibility: hidden;
+                display: none;
+                width: 24px;
+                height: 24px;
+            }
+
         </style>
-        <div class$="{{computeStyle(major)}}"><img id="contextmenu" class="contextmenu" src="menu.png">{{text}}<img id="deletebutton" class="deletebutton" src="close.png"></div>
+        <div class$="{{computeStyle(major)}}"><img id="contextmenu" class="contextmenu">{{text}}<img id="deletebutton" class="deletebutton"></div>
     </template>
     <script>
         Polymer({
