--- a/gameengine-editor/src/main/webapp/webcomponents/gameeditor-twofieldpropertyeditor/gameeditor-twofieldpropertyeditor.html
+++ b/gameengine-editor/src/main/webapp/webcomponents/gameeditor-twofieldpropertyeditor/gameeditor-twofieldpropertyeditor.html
@@ -20,9 +20,9 @@
         <style>
             .field {
                 background-color: white;
-                width: 100%;
                 border: 2px solid #33373c;
                 text-align: center;
+                display: table-cell;
             }
 
             .field label {
@@ -44,7 +44,7 @@
             }
 
             .width-2 {
-                width: 25%;
+                width: 50%;
             }
         </style>
         <div class="field width-2">
