--- a/gameengine-editor/src/main/webapp/webcomponents/gameeditor-ruleeditor/gameeditor-ruleeditor.html
+++ b/gameengine-editor/src/main/webapp/webcomponents/gameeditor-ruleeditor/gameeditor-ruleeditor.html
@@ -47,6 +47,15 @@
                 border-style: solid; border-width: 0px 0px 4px 38px; -moz-border-image: url(puzzleright.png) 7 17 11 71 repeat stretch; -webkit-border-image: url(puzzleright.png) 7 17 11 71 repeat stretch; -o-border-image: url(puzzleright.png) 7 17 11 71 repeat stretch; border-image: url(puzzleright.png) 7 17 11 71 fill repeat stretch;
             }
 
+            .genericdeletebutton {
+                vertical-align: middle;
+                content: url("close.png");
+            }
+            .genericdeletebutton:after {
+                content: url("close.png");
+                width: 18px;
+                height: 18px;
+            }
         </style>
 
         <div class="ruleName">
