--- a/gameengine-editor/src/main/webapp/webcomponents/gameeditor-textareapropertyeditor/gameeditor-textareapropertyeditor.html
+++ b/gameengine-editor/src/main/webapp/webcomponents/gameeditor-textareapropertyeditor/gameeditor-textareapropertyeditor.html
@@ -18,9 +18,13 @@
 <dom-module id="gameeditor-textareapropertyeditor">
     <template>
         <style>
+            :host {
+                width: 100%;
+                flex-shrink: 1;
+            }
+
             .field {
                 background-color: white;
-                width: 100%;
                 border: 2px solid #33373c;
                 text-align: center;
             }
