--- a/gameengine-editor/src/main/webapp/webcomponents/gameeditor-twofieldpropertyeditor/gameeditor-twofieldpropertyeditor.html
+++ b/gameengine-editor/src/main/webapp/webcomponents/gameeditor-twofieldpropertyeditor/gameeditor-twofieldpropertyeditor.html
@@ -18,11 +18,17 @@
 <dom-module id="gameeditor-twofieldpropertyeditor">
     <template>
         <style>
+            :host {
+                width: 100%;
+                flex-shrink: 1;
+            }
+
             .field {
                 background-color: white;
                 border: 2px solid #33373c;
                 text-align: center;
                 display: table-cell;
+                width: 100%;
             }
 
             .field label {
