--- a/gameengine-editor/src/main/webapp/webcomponents/gameeditor-animationpropertyeditor/gameeditor-animationpropertyeditor.html
+++ b/gameengine-editor/src/main/webapp/webcomponents/gameeditor-animationpropertyeditor/gameeditor-animationpropertyeditor.html
@@ -18,9 +18,14 @@
 <dom-module id="gameeditor-animationpropertyeditor">
     <template>
         <style>
+            :host {
+                width: 100%;
+                margin: 1px;
+                flex-shrink: 1;
+            }
+
             .field {
                 background-color: white;
-                width: 100%;
                 border: 2px solid #33373c;
                 text-align: center;
             }
@@ -38,10 +43,10 @@
             }
         </style>
 
-        <span class="field">
+        <div class="field">
             <label for="image">[[label]]</label>
             <img id="image" class="width-8">
-        </span>
+        </div>
 
     </template>
     <script>
