--- a/gameengine-editor/src/main/webapp/webcomponents/gameeditor-checkboxpropertyeditor/gameeditor-checkboxpropertyeditor.html
+++ b/gameengine-editor/src/main/webapp/webcomponents/gameeditor-checkboxpropertyeditor/gameeditor-checkboxpropertyeditor.html
@@ -18,9 +18,14 @@
 <dom-module id="gameeditor-checkboxpropertyeditor">
     <template>
         <style>
+            :host {
+                width: 100%;
+                margin: 2px;
+                flex-shrink: 1;
+            }
+
             .field {
                 background-color: white;
-                width: 100%;
                 border: 2px solid #33373c;
                 text-align: center;
             }
