--- a/gameengine-editor/src/main/webapp/webcomponents/gameeditor-selectpropertyeditor/gameeditor-selectpropertyeditor.html
+++ b/gameengine-editor/src/main/webapp/webcomponents/gameeditor-selectpropertyeditor/gameeditor-selectpropertyeditor.html
@@ -18,9 +18,14 @@
 <dom-module id="gameeditor-selectpropertyeditor">
     <template>
         <style>
+            :host {
+                width: 100%;
+                margin: 1px;
+                flex-shrink: 1;
+            }
+
             .field {
                 background-color: white;
-                width: 100%;
                 border: 2px solid #33373c;
                 text-align: center;
             }
