--- a/gameengine-editor/src/main/webapp/webcomponents/gameeditor-textfieldpropertyeditor/gameeditor-textfieldpropertyeditor.html
+++ b/gameengine-editor/src/main/webapp/webcomponents/gameeditor-textfieldpropertyeditor/gameeditor-textfieldpropertyeditor.html
@@ -18,11 +18,18 @@
 <dom-module id="gameeditor-textfieldpropertyeditor">
     <template>
         <style>
+            :host {
+                width: 100%;
+                margin: 1px;
+                flex-shrink: 1;
+            }
+
             .field {
                 background-color: white;
-                width: 100%;
                 border: 2px solid #33373c;
                 text-align: center;
+                width: 100%;
+                display: inline-block;
             }
 
             .field label {
