--- a/gameengine-editor/src/main/webapp/webcomponents/gameeditor-separator/gameeditor-separator.html
+++ b/gameengine-editor/src/main/webapp/webcomponents/gameeditor-separator/gameeditor-separator.html
@@ -63,12 +63,9 @@
             }
 
             .contextmenu:after {
-                vertical-align: middle;
-                float: left;
-                visibility: hidden;
-                display: none;
                 width: 24px;
                 height: 24px;
+                content: url("menu.png");
             }
 
         </style>
