--- a/gameengine-editor/src/main/webapp/testbed.html
+++ b/gameengine-editor/src/main/webapp/testbed.html
@@ -59,6 +59,7 @@
 <div class="grid flexVertical">
 
     <div class="gridItem border-1 propertyEditor shrink width-3 min-width-3" id="objectEditor">
+        <gameeditor-textfieldpropertyeditor label="text"></gameeditor-textfieldpropertyeditor>
         <gameeditor-twofieldpropertyeditor label1="X" label2="Y"></gameeditor-twofieldpropertyeditor>
     </div>
 </div>
