--- a/gameengine-editor/src/main/webapp/webcomponents/gameeditor-animationpropertyeditor/gameeditor-animationpropertyeditor.html
+++ b/gameengine-editor/src/main/webapp/webcomponents/gameeditor-animationpropertyeditor/gameeditor-animationpropertyeditor.html
@@ -20,7 +20,6 @@
         <style>
             :host {
                 width: 100%;
-                margin: 1px;
                 flex-shrink: 1;
             }
 
@@ -38,6 +37,10 @@
                 padding-left: 2px;
             }
 
+            #image {
+                display: inline-block;
+            }
+
             .width-8 {
                 width: 100%;
             }
@@ -45,7 +48,7 @@
 
         <div class="field">
             <label for="image">[[label]]</label>
-            <img id="image" class="width-8">
+            <div id="image" class="width-8">
         </div>
 
     </template>
