--- a/gameengine-editor/src/main/webapp/webcomponents/gameeditor-textfieldpropertyeditor/gameeditor-textfieldpropertyeditor.html
+++ b/gameengine-editor/src/main/webapp/webcomponents/gameeditor-textfieldpropertyeditor/gameeditor-textfieldpropertyeditor.html
@@ -54,17 +54,14 @@
                 float: right;
                 visibility: hidden;
                 display: none;
-                content: url("close.png");
-            }
-
-            .deletebutton:after {
-                content: url("close.png");
+                background-image: url("close.png");
                 width: 18px;
                 height: 18px;
             }
+
         </style>
         <div class="field">
-            <label for="inputfield">[[label]]<img id="deletebutton" class="deletebutton"></label>
+            <label for="inputfield">[[label]]<div id="deletebutton" class="deletebutton"></div></label>
             <input type="text" id="inputfield" name="inputfield" value="{{value}}" on-blur="updateData">
         </div>
     </template>
