--- a/gameengine-editor/src/main/webapp/webcomponents/gameeditor-treeitem/gameeditor-treeitem.html
+++ b/gameengine-editor/src/main/webapp/webcomponents/gameeditor-treeitem/gameeditor-treeitem.html
@@ -68,17 +68,13 @@
                 vertical-align: middle;
                 float: right;
                 visibility: hidden;
-                content: url("close.png");
-            }
-
-            .deletebutton:after {
-                content: url("close.png");
+                background-image: url("close.png");
                 width: 18px;
                 height: 18px;
             }
         </style>
 
-        <div draggable="{{draggable}}" class$="{{computeStyle(level, selected, separator)}}">{{text}}<img id="deletebutton" class="deletebutton"></div>
+        <div draggable="{{draggable}}" class$="{{computeStyle(level, selected, separator)}}">{{text}}<div id="deletebutton" class="deletebutton"></div></div>
     </template>
     <script>
         Polymer({
