--- a/gameengine-editor/src/main/webapp/webcomponents/gameeditor-tabbedpane/gameeditor-tabbedpanetab.html
+++ b/gameengine-editor/src/main/webapp/webcomponents/gameeditor-tabbedpane/gameeditor-tabbedpanetab.html
@@ -76,8 +76,9 @@
                 return "tabpanebutton";
             },
 
-            fireCloseEvent: function() {
-                this.fire("tabclose", {tab: this});
+            fireCloseEvent: function(aEvent) {
+                aEvent.stopPropagation();
+                this.fire("singletabclose", {tab: this});
             },
         });
     </script>
