Bug fixing in resource caching

--- a/gameengine-editor/src/main/webapp/webcomponents/gameeditor-twofieldpropertyeditor/gameeditor-twofieldpropertyeditor.html
+++ b/gameengine-editor/src/main/webapp/webcomponents/gameeditor-twofieldpropertyeditor/gameeditor-twofieldpropertyeditor.html
@@ -21,6 +21,7 @@
             :host {
                 width: 100%;
                 flex-shrink: 1;
+                flex-direction: row;
             }
 
             .field {
